# mastaker

./: .dockerignore  .env.sample  .gitignore  Cargo.toml  Dockerfile  GitVersion.yml  build.rs  memo.md  sources.yml
.devcontainer/: .env.sample  Dockerfile  devcontainer.json  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: docker-publish.yml
src/: average_updater.rs  constants.rs  ext_trait.rs  feed_info.rs  main.rs  post_item.rs  posted_item.rs  readable_string.rs  schema.rs  setup.rs  utility.rs
