[package]
name = "mastaker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
skip_sleep = []

[profile.release]
panic = 'abort'

[dependencies]
serde = "1.0"
serde_yaml = "0.9.34"
serde_derive = "1.0"
reqwest = "0.12.15"
tokio = { version = "1.45", features = ["full"] }
tokio-retry = "0.3.0"
megalodon = "0.13.5"
regex = "1.11.1"
futures = "0.3.31"
once_cell = "1.21.3"
chrono = "0.4.40"
getset = "0.1.5"
sea-orm = { version = "0.12.15", features = ["sqlx-postgres", "sqlx-sqlite", "runtime-tokio-native-tls", "macros", "with-chrono"] }
sea-orm-migration = "1.1.13"
string-builder = "0.2.0"
feed-rs = "2.3.1"
rand = "0.9.1"
async-trait = "0.1.88"
sxd-xpath = "0.4.2"
sxd_html = "0.1.1"
sentry = "0.38.1"
mime = "0.3.17"
encoding_rs = "0.8.35"
sentry-anyhow = "0.41.0"
anyhow = "1.0.98"
